# local-voice-assistant

./: API.cpp  API.h  CMakeLists.txt  main.cpp
API/: API.h
audio/: audioUtil.cpp  audioUtil.h
llm/: localLLM.cpp  localLLM.h  ollama.hpp  prompt.txt
